Two more `<input>` -> `<select>`

--- a/arches_for_science/templates/views/components/functions/multicard-resource-descriptor.htm
+++ b/arches_for_science/templates/views/components/functions/multicard-resource-descriptor.htm
@@ -76,14 +76,14 @@
                 </div>
 
                 <div class="col-xs-12">
-                    <input 
-                    data-bind="select2Query: {
-                        select2Config: {
-                            ...baseSelect2Config,
-                            value: selectedNodes.description,
-                        }
-                    }"
-                    ></input>
+                    <select 
+                        data-bind="select2Query: {
+                            select2Config: {
+                                ...baseSelect2Config,
+                                value: selectedNodes.description,
+                            }
+                        }"
+                    ></select>
                 </div>
             </div>
         </div>
@@ -115,14 +115,14 @@
                 </div>
 
                 <div class="col-xs-12">
-                    <input 
-                    data-bind="select2Query: {
-                        select2Config: {
-                            ...baseSelect2Config,
-                            value: selectedNodes.map_popup,
-                        }
-                    }"
-                    ></input>
+                    <select 
+                        data-bind="select2Query: {
+                            select2Config: {
+                                ...baseSelect2Config,
+                                value: selectedNodes.map_popup,
+                            }
+                        }"
+                    ></select>
                 </div>
             </div>
         </div>
