Align labels under manifest thumbnails #1470

--- a/arches_for_science/media/css/project.css
+++ b/arches_for_science/media/css/project.css
@@ -756,6 +756,7 @@
 .afs-image-service-list-item {
     display: inline-flex;
     align-items: center;
+    flex-direction: column;
     padding-left: 5px;
 }
 
