Add observation type to X/Y and CA final step reports #1469
Relabel technique to procedure

--- a/arches_for_science/templates/views/components/workflows/chemical-analysis-workflow/ca-final-step.htm
+++ b/arches_for_science/templates/views/components/workflows/chemical-analysis-workflow/ca-final-step.htm
@@ -37,6 +37,10 @@
                     <div class="summary-value" data-bind="text: reportVals.usedInstrument.value"></div>
                 </div>
                 <div style="display: inline-flex;">
+                        <div class="summary-label" data-bind="text: reportVals.observationType.name + ':'"></div>
+                        <div class="summary-value" data-bind="text: reportVals.observationType.value"></div>
+                </div>
+                <div style="display: inline-flex;">
                     <div class="summary-label" data-bind="text: reportVals.usedProcess.name + ':'"></div>
                     <div class="summary-value" data-bind="text: reportVals.usedProcess.value"></div>
                 </div>
