Fix button toggling when manipulating sample areas #1471

--- a/arches_for_science/templates/views/components/workflows/sample-taking-workflow/sample-taking-sample-location-step.htm
+++ b/arches_for_science/templates/views/components/workflows/sample-taking-workflow/sample-taking-sample-location-step.htm
@@ -52,6 +52,7 @@
         <div class="new-provisional-edit-card-container">
             <div class="card">
                 <div style="display: flex; gap: 10px">
+                    <!-- ko if: sampleLocationInstances().length === 0 || !!sampleListShowing() -->
                     <button type="button" class="btn" style="
                             background: #9490EE;
                             color: #eee;
@@ -63,6 +64,7 @@
                             {% trans 'Add New Sample' %}
                         </span>
                     </button>
+                    <!-- /ko -->
 
                     <!-- ko if: sampleLocationInstances().length > 0 && !sampleListShowing()-->
                     <button type="button" class="btn" style="
