update positioning of workflow buttons, add section titles, fix tool bar width, adjust background colors

--- a/arches_for_science/media/css/project.css
+++ b/arches_for_science/media/css/project.css
@@ -1486,3 +1486,13 @@ button.project-file-selection:hover {
 #container .uploaded-files table.dataTable.table-striped > tbody > tr.active-file {
     background-color: #dbf1f5;
 }
+
+.workflow-group-title {
+    font-size: 1.15em;
+    width: 100%;
+    margin-left: 5px;
+}
+
+.afs-workflow-layout .workflow-select-title {
+    font-size: 1.1em;
+}
