update font size

--- a/arches_for_science/media/css/project.css
+++ b/arches_for_science/media/css/project.css
@@ -816,6 +816,7 @@
 .afs-calculated-datasetname {
     margin: 5px 0px 15px 0px;
     padding-left: 15px;
+    font-size: 13px;
     height: 36px; 
     white-space: nowrap;
     overflow: hidden;
