Mark strings for translation in /workflows #1503

--- a/arches_for_science/templates/javascript.htm
+++ b/arches_for_science/templates/javascript.htm
@@ -45,20 +45,22 @@
     data='{% trans "Data" as data %} "{{ data|escapejs }}"'
     x-axis='{% trans "X Axis" as xAxis %} "{{ xAxis|escapejs }}"'
     y-axis='{% trans "Y Axis" as yAxis %} "{{ yAxis|escapejs }}"'
+    object='{% trans "Object" as object %} "{{ object|escapejs }}"'
+    project='{% trans "Project" as project %} "{{ project|escapejs }}"'
     project-info='{% trans "Project Info" as projectInfo %} "{{ projectInfo|escapejs }}"'
     select-project='{% trans "Select Project" as selectProject %} "{{ selectProject|escapejs }}"'
     select-template='{% trans "Select Template" as selectTemplate %} "{{ selectTemplate|escapejs }}"'
     summary='{% trans "Summary" as summary %} "{{ summary|escapejs }}"'
-    delete-workflow-title='{% trans "Are you sure you would like to delete this workflow?" as deleteWorkflowTitle %} "{{ deleteWorkflowTitle|escapejs }}"'
-    delete-workflow-warning='{% trans "All data created during the course of this workflow will be deleted." as deleteWorkflowWarning %} "{{ deleteWorkflowWarning|escapejs }}"'
     cleaning-up='{% trans "Cleaning up..." as cleaningUp %} "{{ cleaningUp|escapejs }}"'
     regions='{% trans "Regions" as regions %} "{{ regions|escapejs }}"'
     summary='{% trans "Summary" as summary %} "{{ summary|escapejs }}"'
+    observation='{% trans "Observation" as observation %} "{{ observation|escapejs }}"'
     observation-info='{% trans "Observation Info" as observationInfo %} "{{ observationInfo|escapejs }}"'
     date-sample-taken='{% trans "The date that the sample was taken" as dateSampleTaken %} "{{ dateSampleTaken|escapejs }}"'
     project-name='{% trans "Project Name" as projectName %} "{{ projectName|escapejs }}"'
     project-statement='{% trans "Project Statement" as projectStatement %} "{{ projectStatement|escapejs }}"'
     project-start='{% trans "Project Start" as projectStart %} "{{ projectStart|escapejs }}"'
+    project-timespan='{% trans "Project Timespan" as projectTimespan %} "{{ projectTimespan|escapejs }}"'
     project-timeline='{% trans "Project Timeline" as projectTimeline %} "{{ projectTimeline|escapejs }}"'
     temporal-relations='{% trans "Temporal Relations" as temporalRelations %} "{{ temporalRelations|escapejs }}"'
     temporal-relations-of-project='{% trans "Temporal Relations of Project" as temporalRelationsOfProject %} "{{ temporalRelationsOfProject|escapejs }}"'
@@ -82,7 +84,7 @@
     data-files-location='{% trans "Data Files and Location" as dataFilesLocation %} "{{ dataFilesLocation|escapejs }}"'
     json-error='{% trans "Error Retrieving JSON for view." as jsonError %} "{{ jsonError|escapejs }}"'
     names-classifications='{% trans "Names, Classifications" as namesClassifications %} "{{ namesClassifications|escapejs }}"'
-    names-identifiers-classifications='{% trans "Names, Identifiers, Classificatios" as namesIdentifiersClassifications %} "{{ namesIdentifiersClassifications|escapejs }}"'
+    names-identifiers-classifications='{% trans "Names, Identifiers, Classifications" as namesIdentifiersClassifications %} "{{ namesIdentifiersClassifications|escapejs }}"'
     timeline='{% trans "Timeline" as timeline %} "{{ timeline|escapejs }}"'
     event='{% trans "Event" as event %} "{{ event|escapejs }}"'
     events='{% trans "Events" as events %} "{{ events|escapejs }}"'
@@ -104,11 +106,22 @@
     carriers='{% trans "Information Carriers & Information Carried" as carriers %} "{{ carriers|escapejs }}"'
     aboutness='{% trans "Aboutness" as aboutness %} "{{ aboutness|escapejs }}"'
     actor-relations='{% trans "Actor Relations" as actorRelations %} "{{ actorRelations|escapejs }}"'
+    experiment-name='{% trans "Experiment/Observation Name" as experimentName %} "{{ experimentName|escapejs }}"'
+    sampled-object='{% trans "Sampled Object" as sampledObject %} "{{ sampledObject|escapejs }}"'
+    used-object='{% trans "Used Object" as usedObject %} "{{ usedObject|escapejs }}"'
     components='{% trans "Components" as components %} "{{ components|escapejs }}"'
+    procedure='{% trans "Procedure" as procedure %} "{{ procedure|escapejs }}"'
+    instrument='{% trans "Instrument" as instrument %} "{{ instrument|escapejs }}"'
     instrument-configuration='{% trans "Instrument Configuration" as instrumentConfiguration %} "{{ instrumentConfiguration|escapejs }}"'
+    instrument-parameters='{% trans "Instrument Parameters" as instrumentParameters %} "{{ instrumentParameters|escapejs }}"'
     parameters-outcomes='{% trans "Parameters & Outcomes" as parametersOutcomes %} "{{ parametersOutcomes|escapejs }}"'
     dates='{% trans "Dates" as dates %} "{{ dates|escapejs }}"'
+    sampling-date='{% trans "Sampling Date" as samplingDate %} "{{ samplingDate|escapejs }}"'
+    sampling-name='{% trans "Sampling Activity Name" as samplingName %} "{{ samplingName|escapejs }}"'
+    sampling-technique='{% trans "Sampling Technique" as samplingTechnique %} "{{ samplingTechnique|escapejs }}"'
+    sampling-motivation='{% trans "Sampling Motivation" as samplingMotivation %} "{{ samplingMotivation|escapejs }}"'
     annotator='{% trans "Annotator" as annotator %} "{{ annotator|escapejs }}"'
+    samplers='{% trans "Samplers" as samplers %} "{{ samplers|escapejs }}"'
     area-name='{% trans "Area Name" as areaName %} "{{ areaName|escapejs }}"'
     parent-event='{% trans "Parent Event" as parentEvent %} "{{ parentEvent|escapejs }}"'
     recorded-value='{% trans "Recorded Value" as recordedValue %} "{{ recordedValue|escapejs }}"'
@@ -126,6 +139,21 @@
     identifier='{% trans "Identifier" as identifier %} "{{ identifier|escapejs }}"'
     identifiers='{% trans "Identifiers" as identifiers %} "{{ identifiers|escapejs }}"'
     identifierType='{% trans "Identifier Type" as identifierType %} "{{ identifierType|escapejs }}"'
+    buildingArches='{% trans "Building arches data structures before upload..." as buildingArches %} "{{ buildingArches|escapejs }}"'
+    deleting='{% trans "Deleting" as deleting %} "{{ deleting|escapejs }}"'
+    loading-datasets='{% trans "Loading datasets..." as loadingDatasets %} "{{ loadingDatasets|escapejs }}"'
+    loading-samples-analyses='{% trans "Loading samples and analysis areas..." as loadingSamplesAnalyses %} "{{ loadingSamplesAnalyses|escapejs }}"'
+    saving='{% trans "Saving" as saving %} "{{ saving|escapejs }}"'
+    saved='{% trans "Saved." as saved %} "{{ saved|escapejs }}"'
+    takes-time='{% trans "This may take a while, please do not move away from this step." as takesTime %} "{{ takesTime|escapejs }}"'
+    takes-too-long='{% trans "This is taking longer than usual. Thank you for your patience." as takesTooLong %} "{{ takesTooLong|escapejs }}"'
+    analysis-area='{% trans "Analysis Area" as analysisArea %} "{{ analysisArea|escapejs }}"'
+    analysis-areas='"{{ analysisAreas|pluralize }}"'
+    no-modifying-areas='{% trans "Analysis Areas may not be modified in the sample taking workflow" as noModifyingAreas %} "{{ noModifyingAreas|escapejs }}"'
+    sample-location='{% trans "Sample Location" as sampleLocation %} "{{ sampleLocation|escapejs }}"'
+    no-modifying-samples='{% trans "Sample locations may not be modified in the analysis area workflow" as noModifyingSamples %} "{{ noModifyingSamples|escapejs }}"'
+    physical-thing-placeholder='{% trans "find a physical thing: enter an artist, object name, artwork title or object number" as physicalThingPlaceholder %} "{{ physicalThingPlaceholder|escapejs }}"'
+    annotation-summary-for='{% trans "Annotation Summary for" as annotationSummaryFor %} "{{ annotationSummaryFor|escapejs }}"'
 ></div>
 {% endblock arches_translations %}
 
