--- a/arches_for_science/templates/views/components/reports/digital-resource.htm
+++ b/arches_for_science/templates/views/components/reports/digital-resource.htm
@@ -87,9 +87,8 @@
             <div data-bind="if: activeSection() === 'carriers'">
                 <div class="afs-report-section">
                     <h2 class="afs-report-section-title"><i data-bind="click: function() {toggleVisibility(visible.carriers)}, css: {'fa-angle-double-right': visible.files(), 'fa-angle-double-up': !visible.files()}, attr: {'aria-label': '{% trans "Expand/Collapse" %}'}" class="fa toggle"></i> {% trans "Files" %}</h2>
-                    <span data-bind="if: cards['files of digital resource'] && (!files().length || cards['files of digital resource'].cardinality == 'n')">
-                        <!-- TODO(i18n) card label -->
-                        <a class="afs-report-a" data-bind="click: function(){addNewTile(cards['files of digital resource'])}"><i class="fa fa-mail-reply" aria-hidden="true"></i> {% trans "Add File" %}</a>
+                    <span data-bind="if: cards[cardIds.filesOfDigitalResource] && (!files().length || cards[cardIds.filesOfDigitalResource].cardinality == 'n')">
+                        <a class="afs-report-a" data-bind="click: function(){addNewTile(cards[cardIds.filesOfDigitalResource])}"><i class="fa fa-mail-reply" aria-hidden="true"></i> {% trans "Add File" %}</a>
                     </span>
                 
                     <!-- Collapsible content -->
@@ -116,13 +115,12 @@
                                                 <td data-bind="text: name"></td>
                                                 <td data-bind="text: metadataExists"></td>
                                                 <td class="afs-table-control">
-                                                    <!-- TODO(i18n) -->
-                                                    <div data-bind="if: $parent.cards && $parent.cards['files of digital resource']">
-                                                        <a data-bind="click: function() {$parent.editTile(tileid, $parent.cards['files of digital resource'])},
+                                                    <div data-bind="if: $parent.cards && $parent.cards[cardIds.filesOfDigitalResource]">
+                                                        <a data-bind="click: function() {$parent.editTile(tileid, $parent.cards[cardIds.filesOfDigitalResource])},
                                                             attr: {'aria-label': $root.translations.edit}">
                                                             <i class="fa fa-mail-reply" aria-hidden="true"></i>
                                                         </a>
-                                                        <a data-bind="click: $parent.deleteTile.bind($data, tileid, $parent.cards['files of digital resource']),
+                                                        <a data-bind="click: $parent.deleteTile.bind($data, tileid, $parent.cards[cardIds.filesOfDigitalResource]),
                                                             attr: {'aria-label': $root.translations.delete}">
                                                             <i class="fa fa-trash" aria-hidden="true"></i>
                                                         </a>
