Remove hard-coded sample name on frontend #1516

--- a/arches_for_science/templates/javascript.htm
+++ b/arches_for_science/templates/javascript.htm
@@ -150,6 +150,8 @@
     analysis-area='{% trans "Analysis Area" as analysisArea %} "{{ analysisArea|escapejs }}"'
     analysis-areas='"{{ analysisAreas|pluralize }}"'
     no-modifying-areas='{% trans "Analysis Areas may not be modified in the sample taking workflow" as noModifyingAreas %} "{{ noModifyingAreas|escapejs }}"'
+    analysis-area-of='{% trans "{} [Analysis Area of {}]" as analysisAreaOf %} "{{ analysisAreaOf|escapejs }}"'
+    sample-of='{% trans "{} [Sample of {}]" as sampleOf %} "{{ sampleOf|escapejs }}"'
     sample-location='{% trans "Sample Location" as sampleLocation %} "{{ sampleLocation|escapejs }}"'
     no-modifying-samples='{% trans "Sample locations may not be modified in the analysis area workflow" as noModifyingSamples %} "{{ noModifyingSamples|escapejs }}"'
     physical-thing-placeholder='{% trans "find a physical thing: enter an artist, object name, artwork title or object number" as physicalThingPlaceholder %} "{{ physicalThingPlaceholder|escapejs }}"'
