--- a/arches_for_science/templates/javascript.htm
+++ b/arches_for_science/templates/javascript.htm
@@ -151,6 +151,7 @@
     analysis-areas='"{{ analysisAreas|pluralize }}"'
     analysis-area-of='{% trans "{analysisName} [Analysis Area of {physicalThingName}]" as analysisAreaOf %} "{{ analysisAreaOf|escapejs }}"'
     sample-of='{% trans "{sampleName} [Sample of {physicalThingName}]" as sampleOf %} "{{ sampleOf|escapejs }}"'
+    sampling-activity-of='{% trans "Sampling Activity of {physicalThingName}" as samplingActivityOf %} "{{ samplingActivityOf|escapejs }}"'
     no-modifying-areas='{% trans "Analysis Areas may not be modified in the sample taking workflow" as noModifyingAreas %} "{{ noModifyingAreas|escapejs }}"'
     sample-location='{% trans "Sample Location" as sampleLocation %} "{{ sampleLocation|escapejs }}"'
     no-modifying-samples='{% trans "Sample locations may not be modified in the analysis area workflow" as noModifyingSamples %} "{{ noModifyingSamples|escapejs }}"'
@@ -158,6 +159,7 @@
     annotation-summary-for='{% trans "Annotation Summary for" as annotationSummaryFor %} "{{ annotationSummaryFor|escapejs }}"'
     existing-annotation='{% trans "{title} is a {type} of {parent},\n which is created before" as existingAnnotation %} "{{ existingAnnotation|escapejs }}"'
     timespan='{% trans "TimeSpan" as timespan %} "{{ timespan|escapejs }}"'
+    observation-with='{% trans "Observation of {physicalThingName} with {instrumentName}" as observationWith %} "{{ observationWith|escapejs }}"'
 ></div>
 {% endblock arches_translations %}
 
