--- a/arches_for_science/templates/views/components/reports/scenes/description.htm
+++ b/arches_for_science/templates/views/components/reports/scenes/description.htm
@@ -36,7 +36,7 @@
                                 <td data-bind="text: language"></td>
                                 <td class="afs-table-control">
                                     <div data-bind="if: $parent.cards && $parent.cards.statement">
-                                        <a data-bind="click: function() {$parent.edit(tileid, $parent.cards.statement)}
+                                        <a data-bind="click: function() {$parent.edit(tileid, $parent.cards.statement)},
                                             attr: {'aria-label': $root.translations.edit}">
                                             <i class="fa fa-mail-reply" aria-hidden="true"></i>
                                         </a>
