--- a/arches_for_science/templates/views/components/reports/physical-thing.htm
+++ b/arches_for_science/templates/views/components/reports/physical-thing.htm
@@ -53,7 +53,8 @@
                     name: 'views/components/reports/scenes/documentation',
                     params: {
                         data: resource,
-                        cards: documentationCards
+                        cards: documentationCards,
+                        dataConfig: {subjectOf: false}
                     }
                 }"></div>
             </div>
@@ -136,8 +137,8 @@
                <div class="afs-report-section">
                     <h2 class="afs-report-section-title"><i data-bind="click: function() {toggleVisibility(visible.parts)}, css: {'fa-angle-double-right': visible.parts(), 'fa-angle-double-up': !visible.parts()}, attr: {'aria-label': '{% trans "Expand/Collapse" %}'}" class="fa toggle"></i> {% trans "Parts" %}</h2>
                     <!-- TODO(i18n) card label -->
-                    <span data-bind="if: $data.cards && $data.cards['parts of object']">
-                        <a class="afs-report-a" data-bind="click: function(){addNewTile($data.cards['parts of object'])}"><i class="fa fa-mail-reply" aria-hidden="true"></i> {% trans "Add Part" %}</a>
+                    <span data-bind="if: $data.cards && $data.cards[cardIds.partsOfObject]">
+                        <a class="afs-report-a" data-bind="click: function(){addNewTile($data.cards[cardIds.partsOfObject])}"><i class="fa fa-mail-reply" aria-hidden="true"></i> {% trans "Add Part" %}</a>
                     </span>
 
                     <div data-bind="visible: visible.parts" class="afs-report-collapsible-container pad-lft">
