--- a/arches_for_science/templates/views/components/reports/project.htm
+++ b/arches_for_science/templates/views/components/reports/project.htm
@@ -295,7 +295,7 @@
             <h2 class="afs-report-section-title">{% trans "Identifier for Project" %}</h2>
             <div class="afs-report-subsection" >
                 <!-- ko ifnot: identifierSummary() && identifierSummary().length -->
-                <h3 class="afs-report-nodata-message">{% trans "There are no identiers for this resource" %}</h3>
+                <h3 class="afs-report-nodata-message">{% trans "There are no identifiers for this resource" %}</h3>
                 <!-- /ko -->
 
                 <!-- ko if: identifierSummary() && identifierSummary().length -->
