updates label for new physical thing

--- a/arches_for_science/templates/views/components/resource-instance-creator.htm
+++ b/arches_for_science/templates/views/components/resource-instance-creator.htm
@@ -222,6 +222,6 @@
     }"></div>
     <!-- /ko -->
 </div>
-<button class="btn btn-primary" data-bind="click: function(){newResource();}">{% trans "Add Resource" %}</button>
+<button class="btn btn-primary" data-bind="click: function(){newResource();}">{% trans "New Physical Thing" %}</button>
 {% endblock form %}
 
