Removed overflow style

--- a/arches_for_science/templates/help/create-project-workflow-help.htm
+++ b/arches_for_science/templates/help/create-project-workflow-help.htm
@@ -1,7 +1,7 @@
 {% load i18n %}
 
 <div class="ep-help-content">
-    <div style="overflow:scroll;">
+    <div>
         <h4>{% trans "New Project Workflow" %}</h4>
         
         <p>This workflow creates a new Project resource instance. In Arches for Science (AfS), 
