--- a/arches_for_science/templates/help/project-collection-workflow-help.htm
+++ b/arches_for_science/templates/help/project-collection-workflow-help.htm
@@ -16,12 +16,10 @@
         </ul>
 
         <h5><u>Workflow Outcomes</u></h5>
-        <ul>
-            <li>Completion of this workflow will update a given Project resource instance and 
-                the Physical Thing resources instances contained in the project's related 
-                Collection resource instance. 
-            </li>
-        </ul>
+        <p>Completion of this workflow will update a given Project resource instance and 
+           the Physical Thing resources instances contained in the project's related 
+           Collection resource instance. 
+        </p>
         
     </div>
 </div>
