--- a/arches_for_science/templates/help/create-project-workflow-help.htm
+++ b/arches_for_science/templates/help/create-project-workflow-help.htm
@@ -33,9 +33,10 @@
         </ul>
 
         <h5><u>Workflow Outcomes</u></h5>
-        <p>Completion of this workflow will result in the creation of a new Project resource instance 
-           and a new Collection resource instance. The project's collection will be used to organize 
-           the Physical Things resource instances involved in the Project. 
+        <p>
+            Completion of this workflow will result in the creation of a new Project resource instance 
+            and a new Collection resource instance. The project's collection will be used to organize 
+            the Physical Things resource instances involved in the Project. 
         </p>
         
     </div>
